@@ -52,12 +52,7 @@
         <item>
             <key> <string>group_list</string> </key>
             <value>
-              <tuple>
-                <string>document</string>
-                <string>my_document</string>
-                <string>recent_document</string>
-                <string>web_document</string>
-              </tuple>
+              <tuple/>
             </value>
         </item>
         <item>
